--- a/Styles.css
+++ b/Styles.css
@@ -12,20 +12,14 @@ body {
   grid-template-rows: 50px 1fr 50px;
 
   grid-template-areas:
-    'header'
     'main'
     'footer';
   height: 100vh;
 }
 
-.header {
-  grid-area: header;
-  background-color: whitesmoke;
-}
-
 .aside {
   grid-area: aside;
-  background-color: darkblue;
+  background-color: gray;
 }
 
 .main {
@@ -38,7 +32,7 @@ body {
 }
 
 /* flexing header and footer*/
-.header,
+
 .footer {
   display: flex;
   align-items: center;
@@ -52,7 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 240px;
+  width: 125px;
   position: fixed;
   overflow-y: auto;
   z-index: 2;
@@ -98,7 +92,7 @@ body {
   height: 100px;
   border: 1px solid darkblue;
   border-radius: 4px;
-  color: darkblue;
+  color: rgb(21, 139, 0);
 }
 /* Layout for main-cards section // below main_overview */
 .main_cards {
