--- a/Styles.css
+++ b/Styles.css
@@ -29,6 +29,11 @@ body {
   background-image: url('marsimage.jpg');
 }
 
+img {
+  height: 100%;
+  width: 100%;
+}
+
 /* flexing aside */
 .aside {
   display: flex;
