--- a/Styles.css
+++ b/Styles.css
@@ -5,7 +5,7 @@ body {
   box-sizing: border-box;
   font-family: monospace;
   font-size: 15px;
-  background-image: url('marsimage.jpg');
+  background-image: url('stars.jpeg');
 }
 .grid-container {
   display: grid;
