--- a/Styles.css
+++ b/Styles.css
@@ -25,8 +25,6 @@ body {
 
 .main {
   grid-area: main;
-  /*background-color: white;*/
-  background-image: url('marsimage.jpg');
 }
 
 img {
@@ -166,6 +164,10 @@ img {
 }
 .card:nth-child(4) {
   grid-area: card4;
+}
+
+.cardNews {
+  overflow: auto;
 }
 
 .cardNews .search {
