--- a/Styles.css
+++ b/Styles.css
@@ -273,3 +273,38 @@ nav a:hover::before {
     display: none;
   }
 }
+
+.content {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 0.25em;
+  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  left: 15%;
+  position: absolute;
+  text-align: center;
+  top: 5%;
+  height: 70%;
+  width: 80%;
+  margin-bottom: 5%;
+  padding: 2%;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+#mars-clock {
+  margin-top: 10%;
+  color: darkblue;
+}
+.time {
+  letter-spacing: 0.05em;
+  font-size: 50px;
+  padding: 5px 0;
+}
+.date {
+  letter-spacing: 0.1em;
+  font-size: 24px;
+}
