--- a/Styles.css
+++ b/Styles.css
@@ -5,16 +5,16 @@ body {
   box-sizing: border-box;
   font-family: monospace;
   font-size: 15px;
-  background-image: url('stars.jpeg');
+  background-image: url("stars.jpeg");
 }
 .grid-container {
   display: grid;
   grid-template-columns: 125px 1fr;
   grid-template-rows: 50px 2fr 1fr;
   grid-template-areas:
-    'aside main'
-    'aside main'
-    'aside main';
+    "aside main"
+    "aside main"
+    "aside main";
   height: 100vh;
 }
 
@@ -61,7 +61,7 @@ nav a:hover {
 }
 
 nav a::before {
-  content: '';
+  content: "";
   display: block;
   background-color: white;
   height: 6px;
@@ -107,26 +107,38 @@ nav a:hover::before {
 /* Layout for main content overview  and its cards*/
 .main_overview {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row nowrap;
   align-items: center;
 }
 
-.overview_card {
-  flex-basis: 250px;
+.background_cell {
+  background-image: linear-gradient(
+    30deg,
+    rgb(50, 36, 77),
+    rgb(117, 59, 82),
+    rgb(189, 94, 68)
+  );
+  margin: 5px;
+  border-radius: 6px;
+  padding: 5px;
   flex-grow: 1;
-  margin: 10px 10px;
+}
+
+.overview_card {
   display: flex;
   flex-flow: column wrap;
+  flex-grow: 1;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
   /* background-color: seagreen; */
   height: 100px;
-  border: 1px solid rgb(70, 70, 79);
+  border: 2px solid rgb(80, 187, 208);
   border-radius: 4px;
-  color: rgb(62, 82, 59);
-  background-color: white;
+  color: rgb(255, 213, 166);
+  background-color: rgba(54, 131, 146, 0.68);
 }
+
 /* Layout for main-cards section // below main_overview */
 .main_cards {
   margin: 10px;
@@ -135,10 +147,10 @@ nav a:hover::before {
   /*grid-template-rows: 500px 200px 300px;*/
   grid-template-rows: 2fr 1fr 3fr;
   grid-template-areas:
-    'card1'
-    'card2'
-    'card3'
-    'card4';
+    "card1"
+    "card2"
+    "card3"
+    "card4";
   grid-gap: 10px;
 }
 .card {
@@ -222,9 +234,9 @@ nav a:hover::before {
     grid-template-columns: 150px 1fr;
     grid-template-rows: 50px 1fr 1fr;
     grid-template-areas:
-      'aside main'
-      'aside main'
-      'aside main';
+      "aside main"
+      "aside main"
+      "aside main";
     height: 100vh;
   }
 
@@ -241,8 +253,8 @@ nav a:hover::before {
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 200px 400px;
     grid-template-areas:
-      'card1 card2 card3'
-      'card1 card4 card4';
+      "card1 card2 card3"
+      "card1 card4 card4";
     grid-gap: 10px;
   }
 }
@@ -307,4 +319,9 @@ p {
 .date {
   letter-spacing: 0.1em;
   font-size: 24px;
+}
+
+.weather_cell {
+  flex-grow: 1;
+  flex-shrink: 0;
 }
