--- a/Styles.css
+++ b/Styles.css
@@ -18,11 +18,6 @@ body {
   height: 100vh;
 }
 
-.aside {
-  grid-area: aside;
-  background-color: gray;
-}
-
 .main {
   grid-area: main;
 }
@@ -46,24 +41,25 @@ nav ul {
 nav li {
   display: inline-block;
   position: relative;
+  border: 2px solid rgb(80, 187, 208);
+  background-color: rgba(54, 131, 146, 0.68);
+  border-radius: 4px;
+  width: 65%;
+  margin: 5px;
 }
 
 nav a {
-  color: white;
+  color: rgb(255, 213, 166);
   text-decoration: none;
   text-transform: uppercase;
   font-size: 15px;
   width: 100%;
 }
 
-nav a:hover {
-  color: white;
-}
-
 nav a::before {
   content: "";
   display: block;
-  background-color: white;
+  background-color: rgb(255, 213, 166);
   height: 6px;
   width: 0%;
   position: absolute;
@@ -72,7 +68,7 @@ nav a::before {
 }
 
 nav a:hover::before {
-  width: 100%;
+  width: 80%;
 }
 
 /* flexing aside */
@@ -85,6 +81,14 @@ nav a:hover::before {
   overflow-y: auto;
   z-index: 2;
   transform: translateX(-245px);
+  grid-area: aside;
+  background-color: rgba(54, 131, 146, 0.68);
+  background-image: linear-gradient(
+    30deg,
+    rgb(50, 36, 77),
+    rgb(117, 59, 82),
+    rgb(189, 94, 68)
+  );
 }
 
 .aside.active {
