--- a/weather.css
+++ b/weather.css
@@ -63,3 +63,59 @@
   grid-column: 2 / 3;
   grid-row: 6 / 7;
 }
+
+.time_box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(9, 1fr);
+}
+
+.time_box > .airy_mean_time {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.time_box > .mars_time {
+  grid-column: 1 / 5;
+  grid-row: 2 / 4;
+}
+
+.time_box > .mars_date_title {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+}
+
+.time_box > .mars_date {
+  grid-column: 3 / 5;
+  grid-row: 4 / 5;
+}
+
+.time_box > .gale_title {
+  grid-column: 1 / 3;
+  grid-row: 5 / 6;
+}
+
+.time_box > .gale_time {
+  grid-column: 3 / 5;
+  grid-row: 5 / 6;
+}
+
+.time_box > .green_title {
+  grid-column: 1 / 3;
+  grid-row: 6 / 7;
+}
+
+.time_box > .green_time {
+  grid-column: 3 / 5;
+  grid-row: 6 / 7;
+}
+
+.time_box > .earth_title {
+  grid-column: 2 / 4;
+  grid-row: 7 / 8;
+}
+
+.time_box > .earth_date {
+  grid-column: 1 / 5;
+  grid-row: 8 / 9;
+}
