some formatting updates

--- a/Styles.css
+++ b/Styles.css
@@ -116,10 +116,7 @@ nav a:hover::before {
 }
 
 .main_overview > .background_cell {
-  flex-grow: 1;
-}
-.main_overview > .background_cell:first-child {
-  flex-grow: 3;
+  height: 100%;
 }
 
 .background_cell {
@@ -142,9 +139,7 @@ nav a:hover::before {
   flex-grow: 1;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
   /* background-color: seagreen; */
-  height: 100px;
   border: 2px solid rgb(80, 187, 208);
   border-radius: 4px;
   color: rgb(255, 213, 166);
