--- a/weather.css
+++ b/weather.css
@@ -1,7 +1,7 @@
 .weather_box {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+  grid-auto-rows: minmax(10px, auto);
 }
 
 .weather_box > .date {
@@ -67,17 +67,18 @@
 .time_box {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(9, 1fr);
+  grid-auto-rows: minmax(10px, auto);
 }
 
 .time_box > .airy_mean_time {
-  grid-column: 1 / 3;
+  grid-column: 1 / 5;
   grid-row: 1 / 2;
 }
 
 .time_box > .mars_time {
   grid-column: 1 / 5;
   grid-row: 2 / 4;
+  font-size: 32px;
 }
 
 .time_box > .mars_date_title {
