--- a/Styles.css
+++ b/Styles.css
@@ -158,7 +158,8 @@ nav a:hover::before {
     'card2'
     'card3'
     'card4'
-    'card5';
+    'card5'
+    'card6';
   grid-gap: 10px;
 }
 .card {
@@ -228,9 +229,18 @@ nav a:hover::before {
 .main_cards > .background_cell:nth-child(5) {
   grid-area: card5;
 }
+.main_cards > .background_cell:nth-child(6) {
+  grid-area: card6;
+}
 
 .cardNews {
   overflow: auto;
+  text-decoration: none;
+}
+
+#input {
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .cardNews .search {
@@ -267,7 +277,7 @@ nav a:hover::before {
     grid-template-areas:
       'card1 card2 card3'
       'card1 card4 card4'
-      'card5 card5 card5';
+      'card5 card5 card6';
     grid-gap: 10px;
   }
 }
@@ -339,4 +349,60 @@ p {
   margin: 0;
   height: 100%;
   width: 100%;
+}
+
+#calculator {
+  font-size: 1.2em;
+  align-items: center;
+  text-align: center;
+}
+
+#result {
+  top: 0;
+  align-items: center;
+  text-align: center;
+}
+
+#btnC {
+  -webkit-border-radius: 25;
+  -moz-border-radius: 25;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  background-image: linear-gradient(
+    30deg,
+    rgb(50, 36, 77),
+    rgb(117, 59, 82),
+    rgb(189, 94, 68)
+  );
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  border: none;
+  outline: 0;
+  margin: 5px;
+}
+
+.cardNews .butt {
+  -webkit-border-radius: 25;
+  -moz-border-radius: 25;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  background-image: linear-gradient(
+    30deg,
+    rgb(50, 36, 77),
+    rgb(117, 59, 82),
+    rgb(189, 94, 68)
+  );
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  border: none;
+  outline: 0;
+  margin: 5px;
 }
