--- a/Styles.css
+++ b/Styles.css
@@ -307,6 +307,49 @@ nav a:hover::before {
   .aside_close-icon {
     display: none;
   }
+  #btnC {
+    -webkit-border-radius: 25;
+    -moz-border-radius: 25;
+    border-radius: 25px;
+    -webkit-box-shadow: 0px 0px 2px #666666;
+    -moz-box-shadow: 0px 1px 3px #666666;
+    box-shadow: 0px 1px 3px #666666;
+    font-family: 'Poppins', sans-serif;
+    color: #ffffff;
+    background-image: linear-gradient(
+      30deg,
+      rgb(50, 36, 77),
+      rgb(117, 59, 82),
+      rgb(189, 94, 68)
+    );
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    border: none;
+    outline: 0;
+    margin: 2px;
+  }
+
+  .cardNews .butt {
+    -webkit-border-radius: 25;
+    -moz-border-radius: 25;
+    border-radius: 25px;
+    -webkit-box-shadow: 0px 1px 3px #666666;
+    -moz-box-shadow: 0px 1px 3px #666666;
+    box-shadow: 0px 1px 3px #666666;
+    font-family: 'Poppins', sans-serif;
+    color: #ffffff;
+    background-image: linear-gradient(
+      30deg,
+      rgb(50, 36, 77),
+      rgb(117, 59, 82),
+      rgb(189, 94, 68)
+    );
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    border: none;
+    outline: 0;
+    margin: 2px;
+  }
 }
 
 .content {
