--- a/Styles.css
+++ b/Styles.css
@@ -464,3 +464,48 @@ p {
   outline: 0;
   margin: 5px;
 }
+
+.background_cell_photos {
+  background-image: linear-gradient(
+    30deg,
+    rgb(50, 36, 77),
+    rgb(117, 59, 82),
+    rgb(189, 94, 68)
+  );
+  margin: 2%;
+  border-radius: 6px;
+  padding: 5px;
+}
+
+#results {
+  padding: 20px;
+  border: 2px solid rgb(80, 187, 208);
+  border-radius: 4px;
+  color: rgb(255, 213, 166);
+  background-color: rgba(54, 131, 146, 0.68);
+  flex-grow: 1;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+#button {
+  -webkit-border-radius: 25;
+  -moz-border-radius: 25;
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  background-image: linear-gradient(
+    30deg,
+    rgb(87, 79, 103),
+    rgb(94, 187, 75),
+    rgb(174, 165, 163)
+  );
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  border: none;
+  outline: 0;
+  margin: 2px;
+}
