--- a/Styles.css
+++ b/Styles.css
@@ -5,16 +5,16 @@ body {
   box-sizing: border-box;
   font-family: monospace;
   font-size: 15px;
-  background-image: url('stars.jpeg');
+  background-image: url("stars.jpeg");
 }
 .grid-container {
   display: grid;
   grid-template-columns: 125px 1fr;
   grid-template-rows: 50px 2fr 1fr;
   grid-template-areas:
-    'aside main'
-    'aside main'
-    'aside main';
+    "aside main"
+    "aside main"
+    "aside main";
   height: 100vh;
 }
 
@@ -57,7 +57,7 @@ nav a {
 }
 
 nav a::before {
-  content: '';
+  content: "";
   display: block;
   background-color: rgb(255, 213, 166);
   height: 6px;
@@ -112,11 +112,7 @@ nav a:hover::before {
 .main_overview {
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
-}
-
-.main_overview > .background_cell {
-  height: 100%;
+  align-items: stretch;
 }
 
 .background_cell {
@@ -131,13 +127,14 @@ nav a:hover::before {
   padding: 5px;
   flex-grow: 1;
   display: flex;
+  align-self: stretch;
 }
 
 .overview_card {
   display: flex;
   flex-flow: column wrap;
   flex-grow: 1;
-  align-items: center;
+  align-self: stretch;
   justify-content: space-between;
   /* background-color: seagreen; */
   border: 2px solid rgb(80, 187, 208);
@@ -154,14 +151,15 @@ nav a:hover::before {
   /*grid-template-rows: 500px 200px 300px;*/
   grid-template-rows: 2fr 1fr 3fr;
   grid-template-areas:
-    'card1'
-    'card2'
-    'card3'
-    'card4'
-    'card5'
-    'card6';
+    "card1"
+    "card2"
+    "card3"
+    "card4"
+    "card5"
+    "card6";
   grid-gap: 10px;
 }
+
 .card {
   padding: 20px;
   border: 2px solid rgb(80, 187, 208);
@@ -266,9 +264,9 @@ nav a:hover::before {
     grid-template-columns: 150px 1fr;
     grid-template-rows: 50px 1fr 1fr;
     grid-template-areas:
-      'aside main'
-      'aside main'
-      'aside main';
+      "aside main"
+      "aside main"
+      "aside main";
     height: 100vh;
   }
 
@@ -285,9 +283,9 @@ nav a:hover::before {
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 200px 400px;
     grid-template-areas:
-      'card1 card2 card3'
-      'card1 card4 card4'
-      'card5 card5 card6';
+      "card1 card2 card3"
+      "card1 card4 card4"
+      "card5 card5 card6";
     grid-gap: 10px;
   }
 }
@@ -324,7 +322,7 @@ nav a:hover::before {
     -webkit-box-shadow: 0px 0px 2px #666666;
     -moz-box-shadow: 0px 1px 3px #666666;
     box-shadow: 0px 1px 3px #666666;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #ffffff;
     background-image: linear-gradient(
       30deg,
@@ -346,7 +344,7 @@ nav a:hover::before {
     -webkit-box-shadow: 0px 1px 3px #666666;
     -moz-box-shadow: 0px 1px 3px #666666;
     box-shadow: 0px 1px 3px #666666;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #ffffff;
     background-image: linear-gradient(
       30deg,
@@ -428,7 +426,7 @@ p {
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #ffffff;
   background-image: linear-gradient(
     30deg,
@@ -450,7 +448,7 @@ p {
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #ffffff;
   background-image: linear-gradient(
     30deg,
@@ -496,7 +494,7 @@ p {
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #ffffff;
   background-image: linear-gradient(
     30deg,
