Improving the design of the line graph to match the rest of the site

--- a/Styles.css
+++ b/Styles.css
@@ -169,6 +169,10 @@ nav a:hover::before {
   flex-grow: 1;
 }
 
+.card.line-box {
+  padding: 0px;
+}
+
 /* overlay stuff*/
 .image_overlay1 {
   margin-top: 0%;
