--- a/Styles.css
+++ b/Styles.css
@@ -164,9 +164,21 @@ nav a:hover::before {
   padding: 20px;
   border: 2px solid rgb(80, 187, 208);
   border-radius: 4px;
-  color: rgb(255, 213, 166);
   background-color: rgba(54, 131, 146, 0.68);
   flex-grow: 1;
+  color: rgba(255, 177, 92, 1);
+}
+
+a:link {
+  color: rgba(255, 177, 92, 1);
+}
+
+a:hover {
+  color: rgba(255, 213, 166, 1);
+}
+
+a:visited {
+  color: rgba(117, 59, 82, 1);
 }
 
 .card.line-box {
